WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204661
[WebKit] Fix compilation warnings for MSVC
https://bugs.webkit.org/show_bug.cgi?id=204661
Summary
[WebKit] Fix compilation warnings for MSVC
Fujii Hironori
Reported
2019-11-27 19:54:18 PST
[WebKit] Fix compilation warnings for MSVC
> WebKit\NetworkProcess\Classifier\WebResourceLoadStatisticsTelemetry.cpp(285) : warning C4715: 'WebKit::makeDescription': not all control paths return a value > WebKit\NetworkProcess\cache\NetworkCacheIOChannelCurl.cpp(50) : warning C4701: potentially uninitialized local variable 'mode' used > WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsDatabaseStore.cpp(946) : warning C4715: 'WebKit::makeStatisticQuery': not all control paths return a value > WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsDatabaseStore.cpp(896) : warning C4701: potentially uninitialized local variable 'median' used > WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsDatabaseStore.cpp(755) : warning C4715: 'WebKit::buildQueryStartAndEnd': not all control paths return a value > WebKit\NetworkProcess/NetworkResourceLoader.cpp(594): warning C4245: 'argument': conversion from 'int' to 'size_t', signed/unsigned mismatch > WebKit\NetworkProcess\NetworkResourceLoader.cpp(345) : warning C4701: potentially uninitialized local variable 'code' used > WebKit\UIProcess/WebURLSchemeTask.cpp(137): warning C4927: illegal conversion; more than one user-defined conversion has been implicitly applied > WebKit\UIProcess/WebURLSchemeTask.cpp(137): note: while calling the constructor 'IPC::SharedBufferDataReference::SharedBufferDataReference(const WebCore::SharedBuffer &)' > WebKit\Platform\IPC\SharedBufferDataReference.h(37): note: see declaration of 'IPC::SharedBufferDataReference::SharedBufferDataReference' > WebKit\UIProcess\WebPageProxy.cpp(7231) : warning C4701: potentially uninitialized local variable 'error' used > WebKit\Shared\API\c\WKSharedAPICast.h(863) : warning C4701: potentially uninitialized local variable 'wkType' used > WebKit\WebProcess/Storage/WebServiceWorkerFetchTaskClient.cpp(87): warning C4927: illegal conversion; more than one user-defined conversion has been implicitly applied > WebKit\WebProcess/Storage/WebServiceWorkerFetchTaskClient.cpp(87): note: while calling the constructor 'IPC::SharedBufferDataReference::SharedBufferDataReference(const WebCore::SharedBuffer &)' > WebKit\Platform\IPC\SharedBufferDataReference.h(37): note: see declaration of 'IPC::SharedBufferDataReference::SharedBufferDataReference' > WebKit\WebProcess/WebCoreSupport/WebEditorClient.cpp(167): warning C4927: illegal conversion; more than one user-defined conversion has been implicitly applied > WebKit\WebProcess/WebCoreSupport/WebEditorClient.cpp(167): note: while calling the constructor 'IPC::SharedBufferDataReference::SharedBufferDataReference(const WebCore::SharedBuffer &)' > WebKit\Platform\IPC\SharedBufferDataReference.h(37): note: see declaration of 'IPC::SharedBufferDataReference::SharedBufferDataReference'
Attachments
Patch
(9.63 KB, patch)
2019-11-27 20:27 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-11-27 20:27:34 PST
Created
attachment 384436
[details]
Patch
Fujii Hironori
Comment 2
2019-12-04 17:41:40 PST
review?
John Wilander
Comment 3
2019-12-04 17:46:35 PST
Comment on
attachment 384436
[details]
Patch The ITP related changes (the ones under NetworkProcess/Classifier/) look fine.
Fujii Hironori
Comment 4
2019-12-05 18:00:03 PST
Comment on
attachment 384436
[details]
Patch Clearing flags on attachment: 384436 Committed
r253195
: <
https://trac.webkit.org/changeset/253195
>
Fujii Hironori
Comment 5
2019-12-05 18:00:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-12-05 18:01:22 PST
<
rdar://problem/57684914
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug